# CNN-Vegetable-Classifier

./: .env.sample  .gitignore  README.md  pyproject.toml  requiredment.txt  test.py  train_model.ipynb  vegetable.ipynb
cnn_vegetable_classifier/: default_settings.py
cnn_vegetable_classifier/cmd/: web.py
cnn_vegetable_classifier/models/: __init__.py  classifiers.py
cnn_vegetable_classifier/web/: __init__.py  acl.py
cnn_vegetable_classifier/web/forms/: __init__.py  classifiers.py
cnn_vegetable_classifier/web/static/: package.json
cnn_vegetable_classifier/web/templates/base/: base-layout.html  default-page.html
cnn_vegetable_classifier/web/templates/sites/: index.html  result.html
cnn_vegetable_classifier/web/views/: site.py
scripts/: run-web
